renamed:    chinese/product/.DS_Store -> chinese/.DS_Store modified:   chinese/About.html modified:   chinese/events.html deleted:    chinese/product/19.html deleted:    chinese/product/21.html deleted:    chinese/product/24.html deleted:    chinese/product/31.html deleted:    chinese/product/47.html modified:   chinese/products.html modified:   product/.DS_Store modified:   product/1.html modified:   product/10.html modified:   product/11.html modified:   product/13.html modified:   product/14.html modified:   product/18.html modified:   product/19.html modified:   product/2.html modified:   product/20.html modified:   product/21.html modified:   product/22.html modified:   product/23.html modified:   product/24.html modified:   product/29.html modified:   product/30.html modified:   product/31.html modified:   product/4.html modified:   product/47.html modified:   product/7.html modified:   product/8.html modified:   product/9.html renamed:    chinese/product/1.html -> product/chinese/1.html renamed:    chinese/product/10.html -> product/chinese/10.html renamed:    chinese/product/11.html -> product/chinese/11.html renamed:    chinese/product/13.html -> product/chinese/13.html renamed:    chinese/product/14.html -> product/chinese/14.html renamed:    chinese/product/18.html -> product/chinese/18.html new file:   product/chinese/19.html renamed:    chinese/product/2.html -> product/chinese/2.html renamed:    chinese/product/20.html -> product/chinese/20.html new file:   product/chinese/21.html renamed:    chinese/product/22.html -> product/chinese/22.html renamed:    chinese/product/23.html -> product/chinese/23.html new file:   product/chinese/24.html renamed:    chinese/product/29.html -> product/chinese/29.html renamed:    chinese/product/30.html -> product/chinese/30.html new file:   product/chinese/31.html renamed:    chinese/product/4.html -> product/chinese/4.html new file:   product/chinese/47.html renamed:    chinese/product/7.html -> product/chinese/7.htm

--- a/chinese/About.html
+++ b/chinese/About.html
@@ -16,13 +16,13 @@
 
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> 商品介绍
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> 活动促销
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> 关于我们
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/About.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -31,13 +31,13 @@
 
 
 	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> 商品介绍
+		   <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> 活动促销
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> 关于我们
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/About.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
