--- a/chinese/products.html
+++ b/chinese/products.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="navigationblock"></div>
-<div class="apply">FILTER</div>
+<div class="apply">筛选</div>
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
 <a href="https://wangx733.github.io/jogano/home.html">
@@ -17,13 +17,13 @@
 
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> 商品介绍
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> 活动促销
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> 关于我们
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/products.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -32,13 +32,13 @@
 
 
 	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> 商品介绍
+		   <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> 活动促销
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> 关于我们
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/products.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
@@ -217,7 +217,7 @@
 
 
 
-<a data-filter-key="white" href="https://wangx733.github.io/jogano/product/1.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a data-filter-key="white" href="https://wangx733.github.io/jogano/product/chinese/1.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
 <div class="redwine"></div>
 <div class="pricee">¥ 99</div>
 <img src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png" class="image" >
@@ -231,7 +231,7 @@
 
 
 
-<a href="https://wangx733.github.io/jogano/product/2.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/2.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
 <div class="redwine"></div>
 <div class="pricee">¥ 88</div>
 <img src="https://wangx733.github.io/jogano/1-products/2-lostpara.png" class="image" >
@@ -245,7 +245,7 @@
 
 
 
-<a href="https://wangx733.github.io/jogano/product/4.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full">
+<a href="https://wangx733.github.io/jogano/product/chinese/4.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full">
   <div class="redwine"></div>
 <div class="pricee">¥ 358</div>
 <img src="https://wangx733.github.io/jogano/1-products/4-pomerol07.png" class="image" >
@@ -257,7 +257,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/7.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="loire" >
+<a href="https://wangx733.github.io/jogano/product/chinese/7.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="loire" >
   <div class="redwine"></div>
 <div class="pricee">¥ 256</div>
 <img src="https://wangx733.github.io/jogano/1-products/7-cuveeflamme.png" class="image" >
@@ -269,7 +269,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/8.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="loire">
+<a href="https://wangx733.github.io/jogano/product/chinese/8.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="loire">
   <div class="redwine"></div>
 <div class="pricee">¥ 256</div>
 <img src="https://wangx733.github.io/jogano/1-products/8-flamme-rose.png" class="image" >
@@ -281,7 +281,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/9.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="cahors" data-filter-body="full">
+<a href="https://wangx733.github.io/jogano/product/chinese/9.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="cahors" data-filter-body="full">
   <div class="redwine"></div>
 <div class="pricee">¥ 369</div>
 <img src="https://wangx733.github.io/jogano/1-products/9-haute.png" class="image" >
@@ -293,7 +293,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/10.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/10.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 208</div>
 <img src="https://wangx733.github.io/jogano/1-products/10-gouleyant.png" class="image" >
@@ -305,7 +305,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/11.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/11.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 288</div>
 <img src="https://wangx733.github.io/jogano/1-products/11-laffeur.png" class="image" >
@@ -317,7 +317,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/49.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/49.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 246</div>
 <img src="https://wangx733.github.io/jogano/1-products/49-bel.png" class="image" >
@@ -329,7 +329,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/13.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/13.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 209</div>
 <img src="https://wangx733.github.io/jogano/1-products/13-barrabaque.png" class="image" >
@@ -340,7 +340,7 @@
   <h3>波尔多</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/14.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/14.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 299</div>
 <img src="https://wangx733.github.io/jogano/1-products/14-badon.png" class="image" >
@@ -352,7 +352,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/18.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
+<a href="https://wangx733.github.io/jogano/product/chinese/18.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
   <div class="redwine"></div>
 <div class="pricee">¥ 138</div>
 <img src="https://wangx733.github.io/jogano/1-products/18-peyruchet16.png" class="image" >
@@ -364,10 +364,10 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/19.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 218</div>
-<img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
+<img src="https://wangx733.github.io/jogano/1-products/19-beauregard.png" class="image" >
 <h1>杜卡斯白2011 </h1>
 <div class="introo">
   <h3 class="lato">12.5%</h3>
@@ -375,7 +375,7 @@
   <h3>波尔多</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/20.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 218</div>
 <img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
@@ -386,7 +386,7 @@
   <h3>波尔多</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/47.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/47.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 208</div>
 <img src="https://wangx733.github.io/jogano/1-products/47-jalousie.png" class="image" >
@@ -398,7 +398,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/24.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full"> 
+<a href="https://wangx733.github.io/jogano/product/chinese/24.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full"> 
   <div class="redwine"></div>
 <div class="pricee">¥ 450</div>
 <img src="https://wangx733.github.io/jogano/1-products/24-canteloup.png" class="image" >
@@ -410,7 +410,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/22.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/22.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 228</div>
 <img src="https://wangx733.github.io/jogano/1-products/22-semonlon15.png" class="image" >
@@ -422,7 +422,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/21.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/21.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 189</div>
 <img src="https://wangx733.github.io/jogano/1-products/21-Croix12.png" class="image" >
@@ -433,7 +433,7 @@
   <h3>波尔多</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/23.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
+<a href="https://wangx733.github.io/jogano/product/chinese/23.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
   <div class="redwine"></div>
 <div class="pricee">¥ 109</div>
 <img src="https://wangx733.github.io/jogano/1-products/23-luchey.png" class="image" >
@@ -445,7 +445,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/31.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/31.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 680</div>
 <img src="https://wangx733.github.io/jogano/1-products/31-meursault-b.png" class="image" >
@@ -457,7 +457,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 388</div>
 <img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
@@ -469,27 +469,16 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
-  <div class="redwine"></div>
-<div class="pricee">¥ 595</div>
-<img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
-<h1>安妙古堡茂圣丹一级干红</h1>
-<div class="introo">
-  <h3 class="lato">14.0%</h3>
-  <h3>多种葡萄</h3>
-  <h3>波尔多</h3>
-</div>
-</a>
 
 
-<a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/chinese/30.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 448</div>
 <img src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png" class="image" >
 <h1>圣澳干白</h1>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
-  <h3>多种葡萄</h3>
+  <h3>梅洛</h3>
   <h3>勃艮第</h3>
 </div>
 </a>
