--- a/product/chinese/1.html
+++ b/product/chinese/1.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/1.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,32 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/1.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/1.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥99</div>
-<div class="dis-p-name">Bachevillain
+<div class="dis-p-name">龙船王
 
 <div class="dis-alchol">13.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="dis-tobuy">点击购买</a>
 
 
 
@@ -69,15 +69,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Bordeaux</div>
+        法国波尔多法定产区</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-		Beef, Veal, Game (deer, venison), Poultry
+		牛排，野味，家禽肉
 		<div class="dis-notes">
-	<h2>Notes</h2>
-A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensation, accompanied by vanilla ice cream and ripe red fruit. The body is tanned and soft. The aroma of French oak is slightly closed. Overall it is a traditional and feminine French wine. The taste is also food for entry-level wine lovers.
+	<h2>评论品鉴</h2>
+该款酒色呈现出亮丽的紫红色宝石的色泽。 酒体散发出红色水果和香草的香气, 在口中会有柔滑的甘甜感在口中回荡, 伴随着香草冰淇淋和熟透的红色水果的味道。整个酒体柔软圆润, 非常的柔美可口。 收口丹宁平和细柔.收口有些许的法国橡木的香气。 总体上是一支传统而又非常柔美可口的法国酒。性价比极高，同时口感也非常容易让入门级葡萄酒爱好者接受。
+
 <br><br><br><br>
 
 
@@ -87,9 +88,9 @@ A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensa
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
-Cabernet Franc</div>
+梅洛<br>
+赤霞珠<br>
+品麗珠</div>
 </div>
 
 
