--- a/product/chinese/11.html
+++ b/product/chinese/11.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/11.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/11.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/11.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/11.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥288</div>
-<div class="dis-p-name">Ch.Lafleaur Haut Serre
+<div class="dis-p-name">小御龙
 
 <div class="dis-alchol">13.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/11-laffeur.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574530233949" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574530233949" class="dis-tobuy">点击购买</a>
 
 
 
@@ -69,16 +69,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-     Cahors AOC
+    卡奥尔
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-poultry, game, cheese
+烧烤，鹅肝，奶酪
 		<div class="dis-notes">
-	<h2>Notes</h2>
-The large percentage of Malbec gives this wine all the characteristics of a classic Cahors. Located in the heart of the appellation, Château Leret Monpezat has a deep, rich colour of impressive density. The powerful tannin is softened by well-integrated oak from ageing in new barrels. Redolent of blackcurrant in its youth, Château Leret Monpezat has plenty of body and good length.
+	<h2>评论品鉴</h2>
+  该款酒由百分之百的马尔贝克葡萄酿造。该酒酒口感紧致，优雅，天鹅绒般的丝滑。略带辛香、成熟红色水果风味。该酒常获得各专业评分机构89分左右的评分，品质优越。
 <br><br><br><br>
 
 
@@ -88,8 +88,8 @@ The large percentage of Malbec gives this wine all the characteristics of a clas
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Malbec
+  梅洛<br>
+马尔贝克<br>
 </div>
 </div>
 
