--- a/product/chinese/13.html
+++ b/product/chinese/13.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/13.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/13.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/13.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/13.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
-
+  </div>
+  
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥209</div>
-<div class="dis-p-name">Chateau Barrabaque
+<div class="dis-p-name">芭芭拉古堡干红
 
 <div class="dis-alchol">13.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/22-semonlon15.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574522709789" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574522709789" class="dis-tobuy">点击购买</a>
 
 
 
@@ -70,15 +70,15 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-       Canon-Fronsac </div>
+       波尔多右岸,卡农-弗朗萨克 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-		Beef and Venison
+	牛排
 		<div class="dis-notes">
-	<h2>Notes</h2>
-The Barrabaque exhibits plenty of minerallity, high tannin and equally high extract and density, and abundant amounts of sweet red and black fruits, body, and glycerin.
+	<h2>评论品鉴</h2>
+芭芭拉庄园拥有充裕的矿物质味道,充足的丹宁,饱满浓郁的酒体.入口时能感受到成熟的红果类和黑果类水果的甜味，有香料香气, 中段饱满浓郁奶油和香草的味道充满口腔, 收口时仍然有绵长的果香,香草味道和甘草的回甘.
 
 <br><br><br><br>
 
@@ -89,10 +89,9 @@ The Barrabaque exhibits plenty of minerallity, high tannin and equally high extr
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
-CabernetFranc
-</div>
+梅洛<br>
+赤霞珠<br>
+品麗珠</div>
 </div>
 
 
