--- a/product/chinese/18.html
+++ b/product/chinese/18.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/18.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/18.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/18.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/18.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-<div class="dis-price">￥448</div>
-<div class="dis-p-name">Domaine Pierre Amiot et fils Morey Saint Denis
+<div class="dis-price">￥138</div>
+<div class="dis-p-name">贝露雪干白
 
 <div class="dis-alchol">13.5%</div>
 </div>
-<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png">
+<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/18-peyruchet16.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574740387737" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574736447103" class="dis-tobuy">点击购买</a>
 
 
 
@@ -62,23 +62,23 @@
 	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-grape.png">
 	
 <div class="dis-grapenum">
-100%
+70% <br>
+30% <br>
 
 <br>
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Morey-Saint-Denis
+       波尔多
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-Beef and Venison 
+海鲜，河鲜，螺丝，贝克类食物
 		<div class="dis-notes">
-	<h2>Notes</h2>
-This shows typical levels of interest for wines from Saint-Emilion，Mature red & black fruit
-In the mouth, soft attack, tight tannins. Good balance
+	<h2>评论品鉴</h2>
+草香与白花，青苹果与菠萝的香气交相呼应，清新宜人，酒体圆滑不失酸度
 <br><br><br><br>
 
 
@@ -88,7 +88,8 @@ In the mouth, soft attack, tight tannins. Good balance
 </div>
 
 <div class="dis-grapecompo">
-Pinot Noir
+白苏维翁<br>
+赛美蓉<br>
 </div>
 </div>
 
