--- a/product/chinese/22.html
+++ b/product/chinese/22.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/22.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/2.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/22.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/22.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
-
+  </div>
+  
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥228</div>
-<div class="dis-p-name">Chateau Semonlon 
+<div class="dis-p-name">赛梦龙
 
 <div class="dis-alchol">13.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/22-semonlon15.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574528509895" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574528509895" class="dis-tobuy">点击购买</a>
 
 
 
@@ -69,18 +69,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Avensan</div>
+      波尔多上梅多克</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
 		Beef, Veal, 
 		<div class="dis-notes">
-	<h2>Notes</h2>
-Very soft, supple wine with some elegance and  nice aromas of strawberries and cherries.
-The soil of Margaux yields its finesse and elegance.
- Already nice to drink and even better after 4 to 5 years cellaring.
-To drink with cooked dishes and red meat.
+	<h2>评论品鉴</h2>
+酒色呈现出深红紫色宝石的色泽. 香气和口感都有非常浓郁成熟的草莓和黑樱桃味道, 回味伴随着一些甘草味道和红色花朵的香气. 酒体丰满有层次感, 单宁细腻平和. 整体是一支性价比极高的玛歌风格的上梅多克酒. 
+
 <br><br><br><br>
 
 
@@ -90,8 +88,8 @@ To drink with cooked dishes and red meat.
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
+  梅洛<br>
+赤霞珠<br>
 </div>
 </div>
 
