--- a/product/chinese/23.html
+++ b/product/chinese/23.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/23.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/23.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/23.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/23.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥109</div>
-<div class="dis-p-name">Chateau Tour de Luchey
+<div class="dis-p-name">桃露雪
 
 <div class="dis-alchol">13.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/23-luchey.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574742559860" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574742559860" class="dis-tobuy">点击购买</a>
 
 
 
@@ -70,16 +70,15 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-       Moulon</div>
+       法国波尔多法定产区</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-	grilled meats, casseroles and cheeses 
+	烤肉，砂锅菜，芝士
 		<div class="dis-notes">
-	<h2>Notes</h2>
-A well-balanced luscious, round and supple wine with loads of fresh red fruits 
-And ripe tannins
+	<h2>评论品鉴</h2>
+酒款综述：该款酒色呈现出亮丽的红宝石的色泽. 酒体散发出红色水果和香草的香气, 在口中会有丝丝的甘甜感在口中回荡, 伴随着香草冰淇淋和熟透的红色水果的味道. 整个酒体柔软圆润, 非常的柔美可口. 收口丹宁平和细柔. 总体上是一支非常柔美可口的法国酒.
 <br><br><br><br>
 
 
@@ -89,10 +88,9 @@ And ripe tannins
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
-CabernetFranc
-</div>
+  梅洛<br>
+赤霞珠<br>
+品麗珠</div>
 </div>
 
 
