--- a/product/chinese/24.html
+++ b/product/chinese/24.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/24.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,31 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/24.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/24.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
-
+  </div>
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥450</div>
-<div class="dis-p-name">CHATEAU GRAND CANTELOUP
+<div class="dis-p-name">康龙堡干红
 
 <div class="dis-alchol">13.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/24-canteloup.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574637934284" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574637934284" class="dis-tobuy"> 点击购买</a>
 
 
 
@@ -69,16 +68,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Pessac-Léognan white
+       波尔多,首丘
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-Beef and Venison 
+牛排 
 		<div class="dis-notes">
-	<h2>Notes</h2>
-Light yellow. Predominant notes of grapefruit and exotic fruits on the nose. Powerful attack revealing fat, power-driven mid-palate and aftertaste. Vegetal touch on the finish. Everything needs to fall into place.
+	<h2>评论品鉴</h2>
+得利于酒庄葡萄田在波尔多首丘名产区独特的风土条件，康龙古堡成为波尔多数万酒庄里面为数极少的数家能种植马贝克葡萄的酒庄。所以该款佳酿是具有新世界葡萄酒风格口感和法国葡萄酒的优雅及平衡的混合风格的葡萄酒。香气上该酒以黑果类水果和香草气味为主，醒发充分后会有少量的茉莉花香，入口甘甜，大量的新鲜果肉味和香草冰淇淋的味道充满口腔。酒体非常饱满而且十分细滑，收口回甘明显充分，回味上有黑果类香味和少量的茉莉花香。这款Grand Canteloup为该酒庄的特选级庄主珍酿，其品质使得其成为波尔多首丘区不容错过的代表之作。
 <br><br><br><br>
 
 
@@ -88,8 +87,8 @@ Light yellow. Predominant notes of grapefruit and exotic fruits on the nose. Pow
 </div>
 
 <div class="dis-grapecompo">
-	Sauvignon Blan<br>
-Sauvignon Gris
+	品丽珠<br>
+马贝克
 
 </div>
 </div>
