--- a/product/chinese/31.html
+++ b/product/chinese/31.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/31.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,32 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/product/31.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/31.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/31.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥680</div>
-<div class="dis-p-name">Sylvain Loichet Meusault
+<div class="dis-p-name">摩硕干白葡萄酒2010
 
 <div class="dis-alchol">13.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/31-meursault.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574740695178" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574740695178" class="dis-tobuy">点击购买</a>
 
 
 
@@ -68,16 +68,17 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-       Meursault 
+      勃艮第-伯恩丘-摩硕
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-Chicken, Turkey 
+鸡肉，火鸡肉
 		<div class="dis-notes">
-	<h2>Notes</h2>
-This buttercup-coloured Chardonnay releases aromas of toast, fresh hazelnuts, as well as oaky notes due to its 14 months barrel aging. On the palate, the mellow oak gives the wine a fat, smooth texture along with good length.
+	<h2>评论品鉴</h2>
+摩硕白葡萄酒更多表现的是干爽柔美，带有奶油，坚果甚至辛香香料的味道。有淡淡的丁香、杏仁与矿物质的味道。酒整体体现出浓郁，淳厚， 丰满，成熟而优雅的特点。香气持久， 整体平衡完美，还有陈年能力的干白。
+本款酒呈现金绿色或者金丝雀黄，随着逐渐熟成，颜色会偏铜色。清澈透明而又光彩夺目，有时会展露出银色闪光。它的醇香有着强烈的熟葡萄的味道。葡萄酒年轻时让人想起烤杏仁和榛子的味道，夹有些许矿物质的味道。黄油、蜂蜜和柑橘类水果的味道也能感觉到。在味蕾中，饱满而圆润，还有令人愉快的清新感受。2010是勃艮第的上佳年份，陈年后的高档白葡萄酒更是难得，在原来果香的基础上，更增添了醇香和柔美。
 <br><br><br><br>
 
 
@@ -87,7 +88,7 @@ This buttercup-coloured Chardonnay releases aromas of toast, fresh hazelnuts, as
 </div>
 
 <div class="dis-grapecompo">
-Chardonnay
+霞多丽
 </div>
 </div>
 
