--- a/product/chinese/4.html
+++ b/product/chinese/4.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/4.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/4.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/4.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/4.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥385</div>
-<div class="dis-p-name">Chateau Du Tailhas
+<div class="dis-p-name">泰好
 
 <div class="dis-alchol">13.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/4-pomerol07.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574378468089" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574378468089" class="dis-tobuy">点击购买</a>
 
 
 
@@ -70,17 +70,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Pomerol 
+        波美侯
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-Beef and Venison 
+牛排，鹿肉
 		<div class="dis-notes">
-	<h2>Notes</h2>
-This shows typical levels of interest for wines from Saint-Emilion，Mature red & black fruit
-In the mouth, soft attack, tight tannins. Good balance
+	<h2>评论品鉴</h2>
+这款酒酒体饱满，紧致集中，单宁柔和细腻。散发着草莓、覆盆子和黑巧克力的香气，优雅温润，口感上层次丰富，陈年能力强。充分反映了波美侯地区的风土特征
 <br><br><br><br>
 
 
@@ -90,10 +89,9 @@ In the mouth, soft attack, tight tannins. Good balance
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
-CabernetFranc
-</div>
+  梅洛<br>
+赤霞珠<br>
+品麗珠</div>
 </div>
 
 
