--- a/product/chinese/7.html
+++ b/product/chinese/7.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/7.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/7.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/7.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/7.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
-
+  </div>
+  
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥256</div>
-<div class="dis-p-name">CuvéeFlamme Brut
+<div class="dis-p-name">法拉陈酿干白起泡酒
 
 <div class="dis-alchol">13.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/7-cuveeflamme.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574662322242" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574662322242" class="dis-tobuy">点击购买</a>
 
 
 
@@ -70,16 +70,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Pomerol 
+       波美侯
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-Beef and Venison 
+牛排，鹿肉
 		<div class="dis-notes">
-	<h2>Notes</h2>
-A lustrous, pale yellow colour; dense foam; fine bubbles. A fresh, sweet-pastry bouquet with notes of hazelnut and candied fruits (apricot and peach). Very harmonious, with excellent fusion of acidity and sweetness that leaves a distinctly fresh impression. Impressive length on the palate as a fruitiness and notes of hazelnut slowly emerge
+	<h2>评论品鉴</h2>
+有光泽的淡黄色; 致密的泡沫; 细泡。 新鲜的甜酥皮花束，带有榛子和蜜饯（杏和桃）的香气。 非常和谐，酸度和甜度的完美融合，给人留下清新的印象。 口感令人印象深刻，果香和榛子的味道慢慢浮现
 <br><br><br><br>
 
 
@@ -89,10 +89,9 @@ A lustrous, pale yellow colour; dense foam; fine bubbles. A fresh, sweet-pastry 
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
-CabernetFranc
-</div>
+  梅洛<br>
+赤霞珠<br>
+品麗珠</div>
 </div>
 
 
