--- a/product/chinese/8.html
+++ b/product/chinese/8.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/8.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/8.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/8.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/8.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
-
+  </div>
+  
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥256</div>
-<div class="dis-p-name">CuvéeFlamme Rosé
+<div class="dis-p-name">法拉桃红起泡酒
 
 <div class="dis-alchol">12.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/8-flamme-rose.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574552481927" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574552481927" class="dis-tobuy">点击购买</a>
 
 
 
@@ -70,18 +70,17 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Crémant de Loire
+        卢瓦
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-Beef and Venison 
+新鲜水果沙拉 
 		<div class="dis-notes">
-	<h2>Notes</h2>
-A delicate pink colour and fine, smooth bubbles. Aromatics which open with floral and fresh fruit notes, including redcurrant. In the mouth, its fresh, light quality is revealed through citrus notes. The finish is forthright and direct, with citrus zest and elderberry aromas.
+	<h2>评论品鉴</h2>
+淡粉色的酒体，浓厚的慕斯和优雅的气泡。具有樱桃，草莓以及红色水果的迷人的香气，酸甜平衡和谐的口感带给你清爽愉悦的感觉。
 <br><br><br><br>
-
 
 
 </div>
@@ -89,9 +88,9 @@ A delicate pink colour and fine, smooth bubbles. Aromatics which open with flora
 </div>
 
 <div class="dis-grapecompo">
-	Chardonnay<br>
-Cabernet Chenin Blanc<br>
-Cabernet Franc
+霞多丽<br>
+白诗南<br>
+品丽珠
 </div>
 </div>
 
