--- a/product/chinese/9.html
+++ b/product/chinese/9.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/9.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,32 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/9.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/9.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥368</div>
-<div class="dis-p-name">CH. DE Haut Serre
+<div class="dis-p-name">大御龙
 
 <div class="dis-alchol">13.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/9-haute.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574744059297" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574744059297" class="dis-tobuy">点击购买</a>
 
 
 
@@ -70,16 +70,17 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Cahors AOC
+       卡奥尔
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-truffle omelettes, roast duck breast, goose confit
+野味色拉，鹅肝，牛排，羊肉，猪肉
 		<div class="dis-notes">
-	<h2>Notes</h2>
-Lovely brilliant color of dark red. Very fine nose. In mouth it shows its soft tannins. The concentration of flavors reminds one of redcurrant jelly. Fine structure and elegance. A very feminine wine.
+	<h2>评论品鉴</h2>
+该酒体属于重酒体，收口绵长，单宁细致紧密，丝般柔滑，成熟的覆盆子、黑莓和香草的香气，陈年能力强 。
+由该酒常获得专业评分机构92分左右的评分，品质优越。
 
 <br><br><br><br>
 
@@ -90,8 +91,8 @@ Lovely brilliant color of dark red. Very fine nose. In mouth it shows its soft t
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Malbec<br>
+	梅洛<br>
+马尔贝克<br>
 </div>
 </div>
 
