--- a/products.html
+++ b/products.html
@@ -363,10 +363,10 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+<a href="https://wangx733.github.io/jogano/product/19.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 218</div>
-<img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
+<img src="https://wangx733.github.io/jogano/1-products/19-beauregard.png" class="image" >
 <h1>Ch. Beauregard Ducasse blanc2011 </h1>
 <div class="introo">
   <h3 class="lato">12.5%</h3>
@@ -468,18 +468,6 @@ r<h1>Sylvain LoichetMeusault </h1>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
-  <div class="redwine"></div>
-<div class="pricee">¥ 595</div>
-<img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
-<h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
-<div class="introo">
-  <h3 class="lato">14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
-</div>
-</a>
-
 
 <a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
@@ -488,7 +476,7 @@ r<h1>Sylvain LoichetMeusault </h1>
 <h1>Sylvain Loichet Saint-Aubin 1er Cru </h1>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
-  <h3>Blend</h3>
+  <h3>merlot</h3>
   <h3>Burgendy</h3>
 </div>
 </a>
