--- a/product/22.html
+++ b/product/22.html
@@ -23,9 +23,9 @@
 
       <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/22.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/22.html" class="cn lang">中文</a>
 </div>
 
 
@@ -38,9 +38,9 @@
 
       <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/22.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/22.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
 	</div>
 
@@ -69,7 +69,8 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Avensan</div>
+        Bordeaux, Haut-Medoc
+</div>
 <br>
 	
 	<div class="dis-pair-description">
