--- a/product/chinese/10.html
+++ b/product/chinese/10.html
@@ -15,46 +15,46 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/product/10.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/10.html" class="cn lang">中文</a>
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/product/10.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/product/chinese/10.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥208</div>
-<div class="dis-p-name">Ch.Gouleyant
+<div class="dis-p-name">古龙
 
 <div class="dis-alchol">13.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/10-gouleyant.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574525281837" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574525281837" class="dis-tobuy">点击购买</a>
 
 
 
@@ -69,16 +69,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Cahors AOC
+        卡奥尔
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-soft past cheeses like Reblochon or Saint- Nectaire
+适合所有的开胃菜及奶酪牛排，猪排，羊排。
 		<div class="dis-notes">
-	<h2>Notes</h2>
-Its colour is dark cherry red. Its nose is typical of the Malbec variety with notes of ripe red and black fruits (Cherry, blackberry, Raspberry, etc...). Its mouth is also very fruity and finishes on soft and elegant tannins. It must be poured at 15°C.
+	<h2>评论品鉴</h2>
+  它的颜色是深樱桃红，香气是典型的成熟红色水果（樱桃、桑子等），口感极其柔
 <br><br><br><br>
 
 
@@ -88,11 +88,10 @@ Its colour is dark cherry red. Its nose is typical of the Malbec variety with no
 </div>
 
 <div class="dis-grapecompo">
-  Merlot<br>
-Malbec<br>
+  梅洛<br>
+马尔贝克<br>
 </div>
 </div>
-
 
 
 <script type="text/javascript" src="https://wangx733.github.io/jogano/jquery-3.1.1.js"></script>
