--- a/product/chinese/19.html
+++ b/product/chinese/19.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/19.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,32 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/19.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/19.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥218</div>
-<div class="dis-p-name">Ch. Beauregard Ducasse blanc2011
+<div class="dis-p-name">杜卡斯白2011
 
 <div class="dis-alchol">12.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/19-beauregard.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574666474107" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574666474107" class="dis-tobuy">点击购买</a>
 
 
 
@@ -69,15 +69,15 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        AOC White Graves</div>
+       波尔多,格拉夫</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-	 grilled  fish
+鱼
 		<div class="dis-notes">
-	<h2>Notes</h2>
-“This dry white wine is fresh with fruity aromas. The mouth develops aromas of pineapple, citrus and white  owers thanks to the Sauvignon. In the mouth, you can notice a very nice sensation of freshness and roundness. The Semillon brings a little of complexity and  eshy to this great vintage.” Jacques Perromat.
+	<h2>评论品鉴</h2>
+该款美酒是来自波尔多最好的干白产区格拉芙,所以其品质和性价比非常的出众. 该款酒色呈淡金黄色, 酒色迷人晶莹剔透. 酒香以鲜美成熟的雪梨为主, 还有一些荔枝,苹果和白色花朵的香气. 整个香气非常高雅迷人. 入口甘甜怡人, 雪梨的味道,在中后段会有果脯和菠萝的味道.收口时甘甜感和少量青拧的酸味交织着结束,而且十分清爽纯净. 口腔中水果味和花香悠长.总体上该款美酒绝对是不可多得的一款来自波尔多最好干白产区佳酿.
 <br><br><br><br>
 
 
@@ -87,8 +87,8 @@
 </div>
 
 <div class="dis-grapecompo">
-Sauvigno<br>
-Semillon
+苏维翁<br>
+赛美蓉<br>
 </div>
 </div>
 
