--- a/product/chinese/21.html
+++ b/product/chinese/21.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/21.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,32 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/21.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/21.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥189</div>
-<div class="dis-p-name">Chateau La Croix Calendreau
+<div class="dis-p-name">十字凯伦
 
 <div class="dis-alchol">13.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/21-Croix12.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574529473267" class="dis-tobuy">Click to buy</a>
+<a href="hhttps://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574529473267" class="dis-tobuy">点击购买</a>
 
 
 
@@ -68,17 +68,16 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-       Libourne
+       超级波尔多
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-grilled steaks, game, poultry, mild cheeses
+牛排，野味，家禽，软芝士
 		<div class="dis-notes">
-	<h2>Notes</h2>
-A wine with a balanced and powerful structure, red fruit aromas and rich ripe tannins.
-<br><br><br><br>
+	<h2>评论品鉴</h2>
+该款佳酿呈现出像新世界酒一样的黑紫色，酒色亮泽有厚度透出其酒体的浓郁和活力。浅层香气有些许紫色花朵，李子和蓝莓的香气，深层香气散发出熟透的黑色水果和果酱的甜香。入口时有种新世界酒的甜美口感，这种迥异的口感来源于十字凯伦古堡减少葡萄植株种植密度，用牺牲产量的办法种出极致成熟度的梅洛。 中段整个口腔充实着浓厚的黑色果类味道，独特的酒体充分的展示出采用波尔多单一品种梅洛酿造所带来的厚实，细密和精致。回味上甘甜感配合着浓郁的果味和烟熏的味道，收口是适度而又活跃的果酸，该款佳酿显现出法国酒平衡不俗的底蕴和构架。总体上是一支结合新世界甜美的口感和波尔多特有骨架而风格迥异的法国村庄级佳酿。<br><br><br><br>
 
 
 
@@ -87,7 +86,7 @@ A wine with a balanced and powerful structure, red fruit aromas and rich ripe ta
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
+	梅洛<br>
 
 </div>
 </div>
