--- a/product/chinese/29.html
+++ b/product/chinese/29.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/29.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,32 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/29.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/29.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥388</div>
-<div class="dis-p-name">Domaine Pierre Amiot et fils Morey Saint Denis
+<div class="dis-p-name">安妙古堡茂圣丹干红
 
 <div class="dis-alchol">13.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/29-morey10.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574631886604" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574631886604" class="dis-tobuy">点击购买</a>
 
 
 
@@ -68,16 +68,17 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Morey-Saint-Denis
+        法国 勃艮第 夏姆-香伯田
 </div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
- rib steak, beef blade, Soft-centred cheeses 
-		<div class="dis-notes">
-	<h2>Notes</h2>
- Masculine in character, as one expects from the Côte de Nuits, full and powerful in the mouth, red Morey-Saint-Denis is most at home with meats of equally strong flavours. Its tannins are more likely to bring out the best from a game bird (such as a pheasant) than a piece of veal, for example. Feathered game, braised or roasted, will succumb smoothly to its meaty texture, and its sustained tannins will continue to make their presence felt until the last succulent, musky mouthful.
+ 精致菜肴、炖肉、烤肉和奶酪
+ 	<div class="dis-notes">
+	<h2>评论品鉴</h2>
+本酒款所采用的葡萄全部采用手工采摘，酒精发酵14天后进入为期18个月的橡木桶陈年阶段，其中50%的橡木桶为法国新橡木桶。复杂且成熟的黑莓，李子香气并带有丝丝松露和泥土的香气。该酒体平衡。口感：清新、馥郁，酒体平衡，单宁柔和、回味悠长
+
 <br><br><br><br>
 
 
@@ -87,7 +88,7 @@
 </div>
 
 <div class="dis-grapecompo">
-Pinot Noir
+黑皮诺
 </div>
 </div>
 
