--- a/product/chinese/47.html
+++ b/product/chinese/47.html
@@ -15,13 +15,13 @@
 </a>
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/chinese/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/47.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -29,32 +29,32 @@
 </div>
 
 
-	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+  <div class="navi2">
+       <a href="https://wangx733.github.io/jogano/chinese/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/chinese/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/chinese/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/product/47.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/product/chinese/47.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
-	</div>
+  </div>
 
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥208</div>
-<div class="dis-p-name">Chateau Jalousie
+<div class="dis-p-name">杰龙古堡干红
 
 <div class="dis-alchol">13.5%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/47-jalousie.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574374396521" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574374396521" class="dis-tobuy">点击购买</a>
 
 
 
@@ -62,21 +62,21 @@
 	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-grape.png">
 	
 <div class="dis-grapenum">
-100%
+100% 
 
 <br>
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-       Fronsac</div>
+      超级波尔多</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-	grilled meats, casseroles and cheeses 
+	烤肉，干锅，芝士
 		<div class="dis-notes">
-	<h2>Notes</h2>
-Very supple wine with a good body and a lot of fruit
+	<h2>评论品鉴</h2>
+该款佳酿呈现出漂亮的深紫色，酒色亮泽透出其新年份葡萄酒特有的活力。2010年极佳年份，香气散发出成熟红色水果才有的香甜果香。入口时甘甜的口感明显高于普遍意义的波尔多酒，这些都得利于戴维营古堡葡萄田产出高成熟度的梅洛。 在口中充实的红果类味道和圆润丰美的酒体，中段口感充分的展示出100%梅洛所带来的细腻和柔滑。回味上的甘甜感和星星点点的天然果酸味，使得该款佳酿不愧为一支法国超级波尔多村庄级葡萄酒，入口甜美虽丰但是收口时适量的酸度保持了平衡构架和底蕴。
 <br><br><br><br>
 
 
@@ -86,9 +86,9 @@ Very supple wine with a good body and a lot of fruit
 </div>
 
 <div class="dis-grapecompo">
-	Merlot
+梅洛<br>
 </div>
-</div>
+
 
 
 
